--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -6,6 +6,13 @@ html {
   
   body {
     margin: 0;
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
+    overflow: hidden;
   }
   
 
@@ -41,6 +48,8 @@ html {
   
   a {
     background-color: transparent;
+    text-decoration: none;
+    color: black;
   }
   
 
