--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -12,7 +12,7 @@ html {
     font-style: normal;
     font-variation-settings:
       "wdth" 100;
-    overflow: hidden;
+    overflow-x: hidden;
   }
   
 
