--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,36 @@
-.first-blok {
-    background-color: #EEEFF1;
-    width: 100%;
-    height: 700px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.container {
+    background-color: #eeeff1;
 }
 
-.text {
+header.container,
+.design-layout {
+    background-color: #eeeff1;
+}
+
+.about-me.container {
+    background-color: white;
+}
+.design-layout {
+    padding-top: 81px;
+    padding-bottom: 141px;
+}
+
+.container__about-me {
+    background-color: white;
+}
+.content {
+    width: 1110px;
+    margin: 0 auto;
+}
+
+.design-layout__text {
     color: #727272;
     font-weight: 400;
     font-size: 16px;
     line-height: 164%;
     letter-spacing: 0%;
     margin-bottom: 65px;
+    width: 540px;
 }
 
 a:hover {
@@ -21,15 +38,15 @@ a:hover {
 }
 
 
-.title {
+.design-layout__title {
     font-weight: 500;
-    font-size: 25px;
+    font-size: 48px;
     line-height: 164%;
     letter-spacing: 0%;
     margin-bottom: 65px;
 }
 
-.button button {
+.design-layout button {
     background-color: #34547A;
     color: white;
     border: none;
@@ -41,28 +58,19 @@ a:hover {
     letter-spacing: 10%;
 }
 
-.content {
-    width: 100%;
-    max-width: 1110px;
-    height: 700px;
-    display: flex;
- 
-}
 
-.part-blok-1 {
-    width: 100%;
-    max-width: 550px;
+.part-block-1 {
+    width: 550px;
     height: 700px;
     display: flex;
     flex-direction: column;
 }
 
-
-
 .menu {
-    margin-top: 79px;
-    margin-bottom: 162px;
+    padding-top: 79px;
+    padding-bottom: 81px;
 }
+
 
 .menu__items {
     display: flex;
@@ -73,7 +81,7 @@ a:hover {
     line-height: 164%;
     letter-spacing: 10%;
 }
-.second-blok {
+.second-block {
     width: 100%;
     height: 360px;
     display: flex;
@@ -81,18 +89,17 @@ a:hover {
     align-items: center;
 }
 
-.article {
-    width: 100%;
-    max-width: 540px;
+.about-me {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin-top: 112px;
-    margin-bottom: 100px;
+    padding-top: 112px;
+    padding-bottom: 100px;
+    background-color: white;
 }
 
-.article__title {
+.about-me__title {
     font-weight: 500;
     font-size: 32px;
     line-height: 100%;
@@ -100,15 +107,16 @@ a:hover {
     margin-bottom: 40px;
 }
 
-.article__text {
+.about-me__text {
     color: #727272;
     font-weight: 400;
     font-size: 16px;
     line-height: 164%;
-    letter-spacing: 0%
+    letter-spacing: 0%;
+    width: 540px;
 }
 
-.thirt-blok {
+.projects {
     width: 100%;
     height: 250px;
     background-color: #34547A;
@@ -118,21 +126,19 @@ a:hover {
     align-items: center;
 }
 
-.thirt-blok__element {
+.projects__element {
     display: flex;
     flex-direction: row;
     align-items: end;
     gap: 20px;
 }
 
-.thirt-blok__elements {
-    width: 100%;
-    max-width: 1110px;
+.projects__elements {
+    width: 1110px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 65px;
-    flex-wrap: wrap;
 }
 
 .second-part__text {
@@ -152,6 +158,85 @@ a:hover {
     line-height: 100%;
     letter-spacing: 0%;
     font-size: 19px;
+}
+
+.fourth-block__container {
+    width: 100%;
+    height: 1004px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.how-i-work {
+    height: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 100px;
+    padding-bottom: 57px;
+    text-align: center;
+}
+
+.how-i-work__title {
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 40px;
+    line-height: 100%;
+    letter-spacing: 0%;
+}
+
+.how-i-work__text {
+    color: #727272;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 164%;
+    letter-spacing: 0%;
+    width: 540px;
+}
+
+.picture__element {
+    width: 1110px;
+    height: 600px;
+    background-image: url(../images/photo.jpg);
+    background-size: contain;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.picture {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 100px;
+}
+
+.footer {
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.footer__text {
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 164%;
+    color: white;
+}
+
+.footer__title {
+    font-size: 21px;
+    font-weight: 450;
+    line-height: 100%;
+    letter-spacing: 0%;
+    color: white;
+    padding-bottom: 13px;
+}
+
+.container__footer {
+    background-color: #34547A;
 }
 
 
