--- a/styles/style.css
+++ b/styles/style.css
@@ -119,7 +119,6 @@ a:hover {
 .projects {
     width: 100%;
     height: 250px;
-    background-color: #34547A;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -139,6 +138,7 @@ a:hover {
     flex-direction: row;
     justify-content: center;
     gap: 65px;
+    flex-wrap: wrap;
 }
 
 .second-part__text {
@@ -199,7 +199,8 @@ a:hover {
     width: 1110px;
     height: 600px;
     background-image: url(../images/photo.jpg);
-    background-size: contain;
+    background-size: cover;
+    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -235,8 +236,12 @@ a:hover {
     padding-bottom: 13px;
 }
 
-.container__footer {
+.container__footer,
+.container__projects {
     background-color: #34547A;
 }
+
+
+
 
 
