--- a/styles/style.css
+++ b/styles/style.css
@@ -1,247 +1,395 @@
 .container {
-    background-color: #eeeff1;
+  background-color: #eeeff1;
 }
 
 header.container,
 .design-layout {
-    background-color: #eeeff1;
-}
-
-.about-me.container {
-    background-color: white;
-}
-.design-layout {
-    padding-top: 81px;
-    padding-bottom: 141px;
-}
-
-.container__about-me {
-    background-color: white;
-}
-.content {
-    width: 1110px;
-    margin: 0 auto;
-}
-
-.design-layout__text {
-    color: #727272;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 164%;
-    letter-spacing: 0%;
-    margin-bottom: 65px;
-    width: 540px;
-}
-
-a:hover {
-    color: #34547A;
-}
-
-
-.design-layout__title {
-    font-weight: 500;
-    font-size: 48px;
-    line-height: 164%;
-    letter-spacing: 0%;
-    margin-bottom: 65px;
-}
-
-.design-layout button {
-    background-color: #34547A;
-    color: white;
-    border: none;
-    padding: 12px 41px;
-    font-size: 14px;
-    cursor: pointer;
-    font-weight: 400;
-    line-height: 164%;
-    letter-spacing: 10%;
-}
-
-
-.part-block-1 {
-    width: 550px;
-    height: 700px;
-    display: flex;
-    flex-direction: column;
+  background-color: #eeeff1;
 }
 
 .menu {
-    padding-top: 79px;
-    padding-bottom: 81px;
+  padding-top: 79px;
+  padding-bottom: 81px;
+}
+.menu .menu__items {
+  display: flex;
+  flex-direction: row;
+  gap: 55px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 164%;
+  letter-spacing: 10%;
 }
 
-
-.menu__items {
-    display: flex;
-    flex-direction: row;
-    gap: 55px;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 164%;
-    letter-spacing: 10%;
+.design-layout {
+  padding-top: 81px;
+  padding-bottom: 141px;
 }
-.second-block {
-    width: 100%;
-    height: 360px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.design-layout .design-layout__title {
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 164%;
+  letter-spacing: 0%;
+  margin-bottom: 65px;
+}
+.design-layout .design-layout__text {
+  color: #727272;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 164%;
+  letter-spacing: 0%;
+  margin-bottom: 65px;
+  width: 540px;
+}
+.design-layout .design-layout__button {
+  background-color: #34547A;
+  color: white;
+  border: none;
+  padding: 12px 41px;
+  font-size: 14px;
+  cursor: pointer;
+  font-weight: 400;
+  line-height: 164%;
+  letter-spacing: 10%;
 }
 
 .about-me {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding-top: 112px;
-    padding-bottom: 100px;
-    background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding-top: 112px;
+  padding-bottom: 100px;
+  background-color: white;
 }
-
-.about-me__title {
-    font-weight: 500;
-    font-size: 32px;
-    line-height: 100%;
-    letter-spacing: 0%;
-    margin-bottom: 40px;
+.about-me .about-me__title {
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  margin-bottom: 40px;
 }
-
-.about-me__text {
-    color: #727272;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 164%;
-    letter-spacing: 0%;
-    width: 540px;
+.about-me .about-me__text {
+  color: #727272;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 164%;
+  letter-spacing: 0%;
+  width: 540px;
 }
 
 .projects {
-    width: 100%;
-    height: 250px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 250px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
-
-.projects__element {
-    display: flex;
-    flex-direction: row;
-    align-items: end;
-    gap: 20px;
+.projects .projects__elements {
+  width: 1110px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 65px;
+  flex-wrap: wrap;
 }
-
-.projects__elements {
-    width: 1110px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 65px;
-    flex-wrap: wrap;
+.projects .projects__elements .projects__element {
+  display: flex;
+  flex-direction: row;
+  align-items: end;
+  gap: 20px;
 }
-
-.second-part__text {
-    font-weight: 400;
-    line-height: 100%;
-    letter-spacing: 0%;
-    font-size: 16px;
-    margin-top: 8px;
+.projects .projects__elements .projects__element .second-part {
+  color: white;
 }
-
-.second-part {
-    color: white;
+.projects .projects__elements .projects__element .second-part .second-part__title {
+  font-weight: 450;
+  line-height: 100%;
+  letter-spacing: 0%;
+  font-size: 19px;
 }
-
-.second-part__title {
-    font-weight: 450;
-    line-height: 100%;
-    letter-spacing: 0%;
-    font-size: 19px;
-}
-
-.fourth-block__container {
-    width: 100%;
-    height: 1004px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.projects .projects__elements .projects__element .second-part .second-part__text {
+  font-weight: 400;
+  line-height: 100%;
+  letter-spacing: 0%;
+  font-size: 16px;
+  margin-top: 8px;
 }
 
 .how-i-work {
-    height: auto;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding-top: 100px;
-    padding-bottom: 57px;
-    text-align: center;
+  height: auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 100px;
+  padding-bottom: 57px;
+  text-align: center;
 }
-
-.how-i-work__title {
-    font-size: 32px;
-    font-weight: 500;
-    margin-bottom: 40px;
-    line-height: 100%;
-    letter-spacing: 0%;
+.how-i-work .how-i-work__title {
+  font-size: 32px;
+  font-weight: 500;
+  margin-bottom: 40px;
+  line-height: 100%;
+  letter-spacing: 0%;
 }
-
-.how-i-work__text {
-    color: #727272;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 164%;
-    letter-spacing: 0%;
-    width: 540px;
-}
-
-.picture__element {
-    width: 1110px;
-    height: 600px;
-    background-image: url(../images/photo.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.how-i-work .how-i-work__text {
+  color: #727272;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 164%;
+  letter-spacing: 0%;
+  width: 540px;
 }
 
 .picture {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 100px;
+}
+.picture .picture__element {
+  width: 1110px;
+  height: 600px;
+  background-image: url(../images/photo.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer {
-    height: 150px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.footer .footer__text {
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 164%;
+  color: white;
+}
+.footer .footer__title {
+  font-size: 21px;
+  font-weight: 450;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: white;
+  padding-bottom: 13px;
 }
 
-.footer__text {
-    font-size: 13px;
-    font-weight: 400;
-    line-height: 164%;
-    color: white;
+.container__about-me {
+  background-color: white;
 }
 
-.footer__title {
-    font-size: 21px;
-    font-weight: 450;
-    line-height: 100%;
-    letter-spacing: 0%;
-    color: white;
-    padding-bottom: 13px;
+.content {
+  width: 1110px;
+  margin: 0 auto;
+}
+
+a:hover {
+  color: #34547A;
 }
 
 .container__footer,
 .container__projects {
-    background-color: #34547A;
+  background-color: #34547A;
 }
 
+@media (max-width: 1125px) {
+  .content {
+    width: 768px;
+  }
+  .picture__element {
+    height: 420px;
+  }
+  .menu {
+    padding-top: 69px;
+    padding-bottom: 71px;
+  }
+  .design-layout {
+    padding-top: 61px;
+    padding-bottom: 130px;
+  }
+  .design-layout__title {
+    margin-bottom: 55px;
+    font-size: 45px;
+  }
+  .design-layout__text {
+    margin-bottom: 55px;
+  }
+  .projects__elements {
+    gap: 50px;
+  }
+  .projects__element {
+    gap: 20px;
+  }
+}
+@media (max-width: 782px) {
+  .content {
+    width: 576px;
+  }
+  .picture__element {
+    height: 320px;
+  }
+  .menu {
+    padding-top: 59px;
+    padding-bottom: 61px;
+  }
+  .design-layout {
+    padding-top: 40px;
+    padding-bottom: 100px;
+  }
+  .picture__image {
+    width: 80px;
+    height: auto;
+  }
+}
+@media (max-width: 592px) {
+  .menu {
+    padding-top: 49px;
+    padding-bottom: 45px;
+    margin-left: 20px;
+    margin-right: 0px;
+  }
+  .menu__items {
+    gap: 35px;
+    font-size: 15px;
+  }
+  .content {
+    width: 375px;
+    margin-left: 20px;
+  }
+  .design-layout {
+    padding-top: 30px;
+    padding-bottom: 90px;
+  }
+  .design-layout__title {
+    margin-bottom: 40px;
+    font-size: 45px;
+  }
+  .design-layout__text {
+    margin-bottom: 55px;
+  }
+  .about-me {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+  .about-me__title {
+    margin-bottom: 30px;
+  }
+  .content {
+    max-width: 450px;
+    width: 100%;
+    margin: 0 auto;
+    box-sizing: border-box;
+  }
+  .design-layout__text,
+  .about-me__text,
+  .how-i-work__text {
+    max-width: 540px;
+    width: 100%;
+    word-break: break-word;
+    white-space: normal;
+  }
+  .projects__elements {
+    gap: 35px;
+  }
+  .projects__element {
+    gap: 13px;
+  }
+  .how-i-work {
+    padding-top: 75px;
+  }
+  .picture__image {
+    width: 70px;
+    height: auto;
+  }
+  .picture__element {
+    height: 270px;
+  }
+}
+@media (max-width: 450px) {
+  .menu {
+    padding-top: 39px;
+    padding-bottom: 35px;
+    margin-left: 20px;
+    margin-right: 0px;
+  }
+  .menu__items {
+    gap: 22px;
+    font-size: 14px;
+  }
+  .content {
+    width: 375px;
+    margin-left: 20px;
+  }
+  .design-layout {
+    padding-top: 12px;
+    padding-bottom: 85px;
+  }
+  .design-layout__title {
+    margin-bottom: 30px;
+    font-size: 40px;
+  }
+  .content {
+    max-width: 375px;
+    width: 100%;
+    margin: 0 auto;
+    box-sizing: border-box;
+  }
+  .about-me {
+    padding-top: 80px;
+    padding-bottom: 30px;
+  }
+  .about-me__title {
+    margin-bottom: 30px;
+  }
+  .design-layout__text,
+  .about-me__text,
+  .how-i-work__text {
+    max-width: 540px;
+    width: 100%;
+    word-break: break-word;
+    white-space: normal;
+    font-size: 15px;
+    margin-bottom: 40px;
+  }
+  .projects__elements {
+    gap: 22px;
+  }
+  .projects__element {
+    gap: 8px;
+  }
+  .projects {
+    height: 200px;
+  }
+  .second-part__title {
+    font-size: 17px;
+  }
+  .second-part__text {
+    margin-top: 4px;
+  }
+  .projects__image {
+    width: 42px;
+    height: auto;
+  }
+  .how-i-work {
+    padding-top: 77px;
+    padding-bottom: 10px;
+  }
+  .picture__image {
+    width: 60px;
+    height: auto;
+  }
+  .picture__element {
+    height: 220px;
+  }
+  .picture {
+    padding-bottom: 70px;
+  }
+}
 
-
-
-
+/*# sourceMappingURL=style.css.map */
